<resources>
    <string-array name="language">
        <item>አማርኛ</item>
        <item>English</item>
        <item>中文</item>
    </string-array>

    <string-array name="languageCode">
        <item>am</item>
        <item>en</item>
        <item>zh</item>
    </string-array>

    <string name="app_name">SMS Guard</string>
    <string name="insert">Insert</string>
    <string name="number">Number</string>
    <string name="send">SEND</string>
    <string name="update">Update</string>
    <string name="recipient">Recipient</string>
    <string name="enter_message">Enter message</string>
    <string name="menu_message">Messages</string>
    <string name="menu_block">Block</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="rules_for_blocking_sms">Rules for Blocking SMS</string>
    <string name="starts_with">Starts with</string>
    <string name="ends_with">Ends with</string>
    <string name="nuclear_option">Nuclear Option</string>
    <string name="keyword">Keyword</string>
    <string name="delete">Delete</string>
    <string name="copy_text">Copy text</string>
    <string name="forward">Forward</string>
    <string name="permission_missing">Permission missing.</string>
    <string name="blacklist">Blacklist</string>
    <string name="apply_rule">Apply Rule</string>
    <string name="no_blocking_rule_is_selected">No blocking rule is selected.</string>
    <string name="remove_blacklist_title">Remove from Blacklist.</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_back">Back</string>
    <string name="remove_blacklist_message">Do you want to remove %s from the Blacklist?</string>
    <string name="removed_successfully">%s removed successfully.</string>
    <string name="blacklist_record_updated">Blacklist record updated!</string>
    <string name="already_blocked">%s already blocked.</string>
    <string name="saved_to_db">%s saved to the database.</string>
    <string name="keyword_already_exists">%s already exists.</string>
    <string name="keyword_length_message">Please use a keyword of length three to fifteen.</string>
    <string name="remove_keyword_title">Remove %s</string>
    <string name="remove_keyword_message">Are you sure you want to remove %s?</string>
    <string name="update_successful">Update was successful!</string>
    <string name="nuclear_option_message">Nuclear option enabled! Now blocking EVERY three &amp; four digit numbers.</string>
    <string name="message_sent_successfully">Message sent successfully.</string>
    <string name="message_delivered">Message delivered to recipient.</string>
    <string name="message_not_received">Message not received by the recipient.</string>
    <string name="no_service">No Service.</string>
    <string name="generic_failure">Generic Failure.</string>
    <string name="radio_off">Radio off</string>
    <string name="null_pdu">Null PDU</string>
    <string name="about_content">Created and maintained by Eyosiyas, open-sourced, feel free to look around.\nhttps://github.com/devEyosiyas/FreedomSMSBlocker</string>
    <string name="contacts_permission_title">Contacts permission required.</string>
    <string name="contacts_permission_message">To display the sender name, the app needs this permission. Do you want to grant them?</string>
    <string name="permission_required">You need to grant the permission!</string>
    <string name="sms_permission_denied_title">SMS Permission denied</string>
    <string name="sms_permission_denied_message">In order to use the app, allow access to SMS. Do you want to try again?</string>
    <string name="button_cancel">Cancel</string>
    <string name="permission_from_settings">Allow Permission form settings</string>
    <string name="default_sms_app_message">For a better use of the app, you need to make this app a default for SMS.</string>
    <string name="default_sms_app_title">Default SMS app</string>
    <string name="menu_language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="select">Select</string>
    <string name="message_options">Message options</string>
    <string name="blocked_messages">Blocked Messages</string>
    <string name="message_deleted">Message deleted successfully!</string>
    <string name="message_delete_body">Are you sure you want to delete this message?</string>
    <string name="message_delete_title">Delete blocked message</string>
    <string name="crowdsource">Crowdsource</string>
    <string name="active_blocking_rule">Additional blocking rule: %s</string>
    <string name="always_active">Always active blocking methods are Blacklist and Keyword-based.</string>
    <string name="whitelist">Whitelist</string>
    <string name="menu_share">Share</string>
    <string name="menu_telegram">Telegram</string>
    <string name="share_title">Share Freedom SMS Blocker</string>
    <string name="share_extra">SMS spammers caused you a headache? I have a solution.\nhttps://t.me/spamFreeLife</string>
    <string name="error_fetching_data">Error occurred while fetching data from Server.</string>
    <string name="insert_crowdsourced_title">Crowdsourced</string>
    <string name="insert_crowdsourced_message">Do you want to add %s from crowdsource?</string>
    <string name="share_crowdsource_title">Share to crowdsource</string>
    <string name="share_crowdsource_message">Contribute %s to crowdsource program?</string>
    <string name="crowdsource_contributed">Successfully contributed to crowdsource program.\nThank you for your contribution.</string>
    <string name="error">Error occurred %s</string>
    <string name="crowdsource_already_contributed">Sorry someone already contributed.\nBetter luck next time.</string>
    <string name="input_number_here">Input number here</string>
    <string name="no_number_inserted">No number inserted, Try again.</string>
    <string name="special_blocking_length">Please use a length of two or three digit number.</string>
    <string name="already_whitelisted">%s already whitelisted.</string>
    <string name="whitelist_record_updated">Whitelist record updated!</string>
    <string name="remove_whitelist_title">Remove from Whitelist.</string>
    <string name="remove_whitelist_message">Do you want to remove %s from the Whitelist?</string>
    <string name="crowdsource_access_granted">Access to Crowdsource granted!</string>
    <string name="crowdsource_access_denied">Enable internet connectivity to one-time activation for crowdsourcing data.</string>
    <string name="blocked_message_from">Blocked Message from %s</string>
    <string name="menu_search">Search</string>
    <string name="tab_inbox">Inbox</string>
    <string name="tab_spam">Spam</string>
    <string name="time_now">Now</string>
    <string name="time_sec">%ds ago</string>
    <string name="time_min">%dm ago</string>
    <string name="time_hour">%dh ago</string>
    <string name="time_yesterday">Yesterday</string>

</resources>