<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navMenuSms"
        android:icon="@drawable/ic_sms"
        android:title="@string/menu_sms" />
    <item
        android:id="@+id/navMenuBlacklist"
        android:icon="@drawable/ic_block"
        android:title="@string/blacklist" />
    <item
        android:id="@+id/navMenuBlockedMessages"
        android:icon="@drawable/ic_blocked_message"
        android:title="@string/blocked_messages" />
    <item
        android:id="@+id/navMenuCrowdSource"
        android:icon="@drawable/ic_crowdsource"
        android:title="@string/crowdsource" />
    <item
        android:id="@+id/navMenuWhitelist"
        android:icon="@drawable/ic_whitelist"
        android:title="@string/whitelist" />

</menu>