<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="8dp"
        android:text="@string/rules_for_blocking_sms"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="8dp"
        android:text="@string/no_blocking_rule_is_selected"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starts_with"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ends_with"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blacklist"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuclear_option"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="8dp"
        android:text="@string/additional_blocking"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/keyword"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/nuclearOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/nuclear_option"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="@string/apply_rule"
        android:textColor="@android:color/white" />

</LinearLayout>